--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "js-datepicker": "^5.18.0",
     "node-fetch": "^2.6.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.9.1"
